# buildkit-metrics-agent

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.yaml  flake.nix
.github/workflows/: on-push.yaml  on-release.yaml
examples/: kubernetes.yaml
examples/grafana/: buildkit-metrics-dashboard.json
examples/kubernetes/: rootless+service.yaml
proto/moby/buildkit/v1/: control.proto  types.proto
src/: main.rs  metrics.rs
tools/codegen/: Cargo.toml
tools/codegen/src/: main.rs
